Fixed navbar alignment issues

--- a/dignity/src/App.css
+++ b/dignity/src/App.css
@@ -16,32 +16,24 @@
   position: relative;
   background: #32668C;
   display: inline-flex;
-  align-items: space-between;
+  align-items: center;
   justify-content: flex-end;
-}
-
-.Dignity {
-  color: white;
-  font-size: 1.1rem;
-  font-weight: 700;
-  align-self: flex-start;
-  flex: 1;
-  padding: 1rem;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .nav-links {
   font-size: 1.1rem;
   font-weight: 700;
   padding: 1rem;
-
+  display: flex;
+  align-items: center;
 }
 
 .nav-links div {
   color: white;
   text-decoration: none;
   transition: color 0.3s ease;
-  
-
 }
 
 .nav-links div:hover {
@@ -65,6 +57,27 @@
   text-decoration: none;
 }
 
+.Logo {
+  width: 32px;
+  height: 34.01px;
+  left: 53px;
+  top: 15px;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  display: inline-flex;
+}
+
+.Dignity {
+  width: 143px;
+  height: 22px;
+  left: 97px;
+  top: 20px;
+  color: white;
+  font-size: 24px;
+  font-weight: 700;
+}
+
 /* Sign in/out */
 .modal-overlay {
   position: fixed;
@@ -76,6 +89,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 9999;
 }
 
 .modal {
@@ -125,10 +139,10 @@ button {
 
 .close-button {
   background-color: #dc3545;
+  z-index: 1;
 }
 
 /* Creator */
-
 .creator-content {
   text-align: center;
 }
